/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
	id 'eclipse'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
	implementation 'org.jline:jline:3.30.6'
 	implementation 'org.jline:jline-terminal-ffm:3.30.6'
	implementation 'com.github.lalyos:jfiglet:0.0.3'
 	implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.fpasd.entry.Main'
	applicationDefaultJvmArgs = [
    	'--enable-native-access=ALL-UNNAMED'
	]
}

